--- a/XamarinApp2TiposTela/XamarinApp2TiposTela.iOS/XamarinApp2TiposTela.iOS.csproj
+++ b/XamarinApp2TiposTela/XamarinApp2TiposTela.iOS/XamarinApp2TiposTela.iOS.csproj
@@ -157,4 +157,13 @@
       <Name>XamarinApp2TiposTela</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\xamarin_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pages.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\play.png" />
+  </ItemGroup>
 </Project>
